<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bible Discovery</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="view_facts">VIEW FACTS</string>
    <string name="miracles">MIRACLES OF JESUS</string>
    <string name="parables_of_jesus">PARABLES OF JESUS</string>
    <string name="main">MAIN MENU</string>
    <string name="learn_more">LEARN MORE</string>
    <string name="action_about">ABOUT</string>
    <string name="exit">EXIT</string>
    <string name="version">Version 1.1</string>
    <string name="Continue">Continue</string>
    <string name="ok">Ok</string>
    <string name="action_share">Share</string>
    <string name="decision">Are you sure, you wanted to make this decision</string>
    <string name="copyright">© Unisoft.com 2015. All rights reserved</string>
    <string name="title_activity_view_facts">View Facts</string>
    <string name="title_activity_learn_more">Learn More</string>
    <string name="title_activity_main_menu">Main Menu</string>
    <string name="title_activity_image_adapter">Image Adapter</string>
    <string name="title_activity_parables_of_jesus">Parables Of Jesus</string>
    <string name="title_activity_miracles_of_jesus">Miracles Of Jesus</string>
    <string name="title_activity_single_view">SingleViewActivity</string>

</resources>
